--- a/Ajax-course/ajax_course/week01/lab1.html
+++ b/Ajax-course/ajax_course/week01/lab1.html
@@ -5,13 +5,10 @@
     <title>Lab1</title>
     <script type="text/javascript" src="lab1.js"></script>
 </head>
-<body>
+<body id="" onload="">
     <h1>Lab 1</h1>
-    <div>
-        <label for="userName">Enter you name:</label>
-        <input id="userName" type="text" name="userName" />
-        <button type="button"  onclick="validateForm()">Submit</button>
-        <p id="inputResult"></p>
-    </div>
+    <label for="userName">Enter you name:</label>
+    <input id="userName" type="text" />
+    <input type="button" value="Submit" id="buttonSubmit" onclick="validateForm();" />
 </body>
 </html>
