Adding calculations of the total astimate of the house for project1.

--- a/Ajax-course/ajax-localhost/project1/index.html
+++ b/Ajax-course/ajax-localhost/project1/index.html
@@ -14,8 +14,8 @@
             <label>Select House Type</label>
             <select id="hoseType">
                 <option value="">-- Select Type --</option>
-                <option value="singleStory">Single Story</option>
-                <option value="towStory">Two Story</option>
+                <option value="1">Single Story</option>
+                <option value="2">Two Story</option>
             </select>
         </div>
 
@@ -33,9 +33,9 @@
 
         <div>
             <label id="carsNumber">Garage (# of vehicles)</label>
-            <input type="radio" name="vehicles" value="one" /> One
-            <input type="radio" name="vehicles" value="two" checked/> Two
-            <input type="radio" name="vehicles" value="three" /> Three
+            <input type="radio" name="vehicles" value="1" /> One
+            <input type="radio" name="vehicles" value="2" checked/> Two
+            <input type="radio" name="vehicles" value="3" /> Three
         </div>
 
         <div>
