Adding week2 lab3.

--- a/Ajax-course/ajax-localhost/project1/index.html
+++ b/Ajax-course/ajax-localhost/project1/index.html
@@ -58,10 +58,14 @@
     </form>
 
     <div>
-        <input type="submit" value="Get Detailed Estimate" onclick="displayEstimate();" />
+        <input type="submit" value="Get Detailed Estimate" id="submit" /> <!--onclick="displayEstimate();" -->
     </div>
 
 
 
 </body>
 </html>
+
+<script>
+    init();
+</script>
