Adding estimate display to project1

--- a/Ajax-course/ajax-localhost/week01/lab1.html
+++ b/Ajax-course/ajax-localhost/week01/lab1.html
@@ -7,8 +7,11 @@
 </head>
 <body id="" onload="">
     <h1>Lab 1</h1>
-    <label for="userName">Enter you name:</label>
-    <input id="userName" type="text" />
-    <input type="button" value="Submit" id="buttonSubmit" onclick="validateForm();" />
+    <form>
+        <label for="userName">Enter you name:</label>
+        <input id="userName" type="text" />
+        <input type="button" value="Submit" id="buttonSubmit" onclick="validateForm();" />
+    </form>
+
 </body>
 </html>
