--- a/Ajax-course/ajax-localhost/project1/index.html
+++ b/Ajax-course/ajax-localhost/project1/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <title>Project1</title>
     <script type="text/javascript" src="script/houseConfiguration.js"></script>
+    <link type="text/css" rel="stylesheet" href="style/houseConfiguration.css">
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 </head>
 <body>
     <h1>Project 1 - Javascript Fundamentals</h1>
@@ -55,13 +66,11 @@
             <input id="sqFootage" type="text" value="" />
         </div>
 
+        <div>
+            <input type="button" value="Get Detailed Estimate" id="submit" />
+        </div>
+
     </form>
-
-    <div>
-        <input type="submit" value="Get Detailed Estimate" id="submit" /> <!--onclick="displayEstimate();" -->
-    </div>
-
-
 
 </body>
 </html>
