Adding week02 lab4.

--- a/Ajax-course/ajax-localhost/demo/demo.html
+++ b/Ajax-course/ajax-localhost/demo/demo.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Demo</h1>
+    <p id="text"></p>
+    
+    <input type="button" id="butnClick" value="Click here" />
 </body>
 </html>
 
