--- a/Ajax-course/ajax-localhost/project1/index.html
+++ b/Ajax-course/ajax-localhost/project1/index.html
@@ -19,6 +19,8 @@
 <body>
     <h1>Project 1 - Javascript Fundamentals</h1>
 
+    <div id="formContainer">
+
     <form>
 
         <div>
@@ -72,6 +74,7 @@
 
     </form>
 
+    </div>
 </body>
 </html>
 
