Adding demos prictice abut jason and events. Adding lab5(Jason).

--- a/Ajax-course/ajax-localhost/project1/index.html
+++ b/Ajax-course/ajax-localhost/project1/index.html
@@ -10,61 +10,60 @@
     <h1>Project 1 - Javascript Fundamentals</h1>
 
     <div id="formContainer">
+        <form>
 
-    <form>
-        <div class="formSection">
-            <label>Select House Type</label>
-            <select id="hoseType">
-                <option value="">-- Select Type --</option>
-                <option value="1">Single Story</option>
-                <option value="2">Two Story</option>
-            </select>
-        </div>
+            <div class="formSection">
+                <label>Select House Type</label>
+                <select id="hoseType">
+                    <option value="">-- Select Type --</option>
+                    <option value="1">Single Story</option>
+                    <option value="2">Two Story</option>
+                </select>
+            </div>
 
-        <div class="formSection">
-            <label>Select Color</label>
-            <select id="color">
-                <option value="">-- Select Color --</option>
-                <option value="blue">Blue</option>
-                <option value="red">Red</option>
-                <option value="beige">Beige</option>
-                <option value="green">Green</option>
-                <option value="grey">Grey</option>
-            </select>
-        </div>
+            <div class="formSection">
+                <label>Select Color</label>
+                <select id="color">
+                    <option value="">-- Select Color --</option>
+                    <option value="blue">Blue</option>
+                    <option value="red">Red</option>
+                    <option value="beige">Beige</option>
+                    <option value="green">Green</option>
+                    <option value="grey">Grey</option>
+                </select>
+            </div>
 
-        <div class="formSection">
-            <label>Exterior Material</label>
-            <select id="materialType">
-                <option value="">-- Select Material --</option>
-                <option value="vinyl">Vinyl</option>
-                <option value="wood">Wood</option>
-                <option value="brick">Brick</option>
-                <option value="stucco">Stucco</option>
-                <option value="stone">Stone</option>
-            </select>
-        </div>
+            <div class="formSection">
+                <label>Exterior Material</label>
+                <select id="materialType">
+                    <option value="">-- Select Material --</option>
+                    <option value="vinyl">Vinyl</option>
+                    <option value="wood">Wood</option>
+                    <option value="brick">Brick</option>
+                    <option value="stucco">Stucco</option>
+                    <option value="stone">Stone</option>
+                </select>
+            </div>
 
-        <div class="formSection">
-            <label>Square Footage</label>
-            <input id="sqFootage" type="text" value="" />
-        </div>
+            <div class="formSection">
+                <label>Square Footage</label>
+                <input id="sqFootage" type="text" value="" />
+            </div>
 
-        <div class="formSection">
-            <label id="carsNumber">Garage (# of vehicles)</label>
-            <input type="radio" name="vehicles" value="1" /> One
-            <input type="radio" name="vehicles" value="2" checked/> Two
-            <input type="radio" name="vehicles" value="3" /> Three
-        </div>
+            <div class="formSection">
+                <label id="carsNumber">Garage (# of vehicles)</label>
+                <input type="radio" name="vehicles" value="1" /> One
+                <input type="radio" name="vehicles" value="2" checked/> Two
+                <input type="radio" name="vehicles" value="3" /> Three
+            </div>
 
-        <br />
+            <div>
+                <input id="submit" type="button" value="Get Detailed Estimate" />
+            </div>
 
-        <div>
-            <input type="button" value="Get Detailed Estimate" id="submit" />
-        </div>
-
-    </form>
+        </form>
     </div>
+
 </body>
 </html>
 
