Adding lab6 and demo about ajax calls.

--- a/Ajax-course/ajax-localhost/week03/lab5/lab5Jason.html
+++ b/Ajax-course/ajax-localhost/week03/lab5/lab5Jason.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Lab5</title>
-    <script type="text/javascript" src="script/lason.js"></script>
+    <script type="text/javascript" src="script/jason.js"></script>
 </head>
 <body>
     <h1>Lab 5</h1>
