--- a/Ajax-course/ajax-localhost/project2/project2.html
+++ b/Ajax-course/ajax-localhost/project2/project2.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Project2</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="script/project2.js" type="text/javascript"></script>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Project2</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="styles/project2.css" type="text/css" />
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="script/project2.js" type="text/javascript"></script>
+    </head>
+    <body>
+        <div id="project2Container">
 
-<h1>Project 2</h1>
+            <h1>Project 2</h1>
 
-    <div id="userInputContainer">
-        <label for="zipcode">Enter Zip Code:</label>
-        <input type="text" id="zipcodeInput" />
-        <button type="submit" id="submit">Get Weather</button>
-    </div>
+            <div id="userInputContainer">
+                <label for="zipcode">Enter Zip Code:</label>
+                <input type="text" id="zipcodeInput" />
+                <button type="submit" id="submit">Get Weather!</button>
+            </div>
 
-</body>
+        </div>
+    </body>
 </html>
 <script>
     init();
