--- a/Ajax-course/ajax-localhost/project2/project2.html
+++ b/Ajax-course/ajax-localhost/project2/project2.html
@@ -5,7 +5,7 @@
         <title>Project2</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="styles/project2.css" type="text/css" />
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.1/jquery.min.js"></script>
         <script src="script/project2.js" type="text/javascript"></script>
     </head>
     <body>
