--- a/Ajax-course/ajax-localhost/project3/project3.html
+++ b/Ajax-course/ajax-localhost/project3/project3.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Project 3</title>
+    <link rel="stylesheet" type="text/css" href="style/project3.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script type="text/javascript" src="script/project3.js"></script>
+
 </head>
     <body>
 
@@ -12,3 +15,4 @@
 
     </body>
 </html>
+
