--- a/Ajax-course/ajax-localhost/project3/project3.html
+++ b/Ajax-course/ajax-localhost/project3/project3.html
@@ -12,6 +12,8 @@
     <body>
 
         <h1>Project 3</h1>
+        <input type="text" id="inputAddTask" />
+        <button type="submit" id="btnAddTask">Add Task</button> <br /><br />
 
     </body>
 </html>
