Adding delete of the task for project3.

--- a/Ajax-course/ajax-localhost/project3/project3.html
+++ b/Ajax-course/ajax-localhost/project3/project3.html
@@ -13,7 +13,7 @@
 
         <h1>Project 3</h1>
         <input type="text" id="inputAddTask" />
-        <button type="submit" id="btnAddTask">Add Task</button> <br /><br />
+        <input type="submit" id="btnAddTask" value="Add Task"> <br /><br />
 
     </body>
 </html>
