Adding project3 and style.

--- a/Ajax-course/ajax-localhost/project3/project3.html
+++ b/Ajax-course/ajax-localhost/project3/project3.html
@@ -10,11 +10,11 @@
 
 </head>
     <body>
-
-        <h1>Project 3</h1>
-        <input type="text" id="inputAddTask" />
-        <input type="submit" id="btnAddTask" value="Add Task"> <br /><br />
-
+        <div id="project3Container">
+            <h1>Project 3</h1>
+            <input type="text" id="inputAddTask" />
+            <input type="submit" id="btnAddTask" value="Add Task"> <br /><br />
+        </div>
     </body>
 </html>
 
