Adding styles to the project3.

--- a/Ajax-course/ajax-localhost/project3/project3.html
+++ b/Ajax-course/ajax-localhost/project3/project3.html
@@ -12,6 +12,7 @@
     <body>
         <div id="project3Container">
             <h1>Project 3</h1>
+            <h2>Enter Your Task</h2>
             <input type="text" id="inputAddTask" />
             <input type="submit" id="btnAddTask" value="Add Task"> <br /><br />
         </div>
