--- a/Ajax-course/ajax-localhost/week06/lab09.html
+++ b/Ajax-course/ajax-localhost/week06/lab09.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Lab 9</title>
-    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
-    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-    <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css" />
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 
     <script src="script/lab09.js" type="text/javascript"></script>
 
